# ESP

./: .gitmodules  README.md  make.sh
codes/mqtt_demo/.output/eagle/debug/image/: eagle.app.v6.out
codes/openssl_demo/.output/eagle/debug/image/: eagle.app.v6.out
common/: versions.h
depends/libsample/: CMakeLists.txt
depends/libsample/include/sample/: text.h
depends/libsample/src/: CMakeLists.txt  text.c
depends/libsample/test/: CMakeLists.txt
depends/patches/libdaemon/arm/: configure.patch
docs/: setup.md
output/mips/: .gitignore
programs/appmain/include/: defines.h
programs/appmain/src/: CMakeLists.txt  main.c
project/main/: CMakeLists.txt  run
project/main/include/: demo.h
project/main/test/: CMakeLists.txt
scripts/: build.sh  depbuild.sh  mk.release  toolchain.arm.cmake  toolchain.mips.cmake  toolchain.x86.cmake
tools/xtensa-lx106-elf/lib/gcc/xtensa-lx106-elf/4.8.2/install-tools/: mkheaders.conf
tools/xtensa-lx106-elf/lib/gcc/xtensa-lx106-elf/4.8.2/plugin/: gtype.state
tools/xtensa-lx106-elf/libexec/gcc/xtensa-lx106-elf/4.8.2/: collect2  liblto_plugin.so.0.0.0  lto-wrapper
tools/xtensa-lx106-elf/libexec/gcc/xtensa-lx106-elf/4.8.2/install-tools/: fixincl  mkheaders
tools/xtensa-lx106-elf/share1/: README.md  build.log.bz2
tools/xtensa-lx106-elf/share1/gdb/: gdbinit
tools/xtensa-lx106-elf/share1/lib/gcc/xtensa-lx106-elf/4.8.2/plugin/include/: configargs.h  tm-preds.h
tools/xtensa-lx106-elf/share1/libexec/gcc/xtensa-lx106-elf/4.8.2/: liblto_plugin.la
tools/xtensa-lx106-elf/share1/libexec/gcc/xtensa-lx106-elf/4.8.2/plugin/: gengtype
